salesforce/force-app/main/default/objects/D360_Approval__c/D360_Approval__c.object-meta.xml
<CustomObject>
    <description>Approval queue record for a gated proposed action.</description>
    <label>D360 Approval</label>
    <nameField>
        <displayFormat>DGA-{0000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>D360 Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>