salesforce/force-app/main/default/objects/D360_Approval__c/fields/Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role__c</fullName>
    <label>Approver Role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>