salesforce/force-app/main/default/objects/D360_Approval__c/fields/Proposed_Action__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Action</label>
    <referenceTo>D360_Proposed_Action__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>