salesforce/force-app/main/default/objects/D360_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Approver_Role__c</columns>
    <columns>Requested_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Approvals</label>
</ListView>